add more details

--- a/index.html
+++ b/index.html
@@ -17,15 +17,22 @@
         <nav class="menu">
             
                 <ul>
-                  <li><a href="#">About Google</a></li>
+                  <li><a href="#">About</a></li>
                   <li><a href="#">Store</a></li>
                   <li><a href="#">Gmail</a></li>
-                  <li><a href="#">Pictures</a></li>
-                  <li><a href="#">Symbol</a></li>
-                  <li><a href="#">Login-Button</a></li>
+
+
+                  <li style="float:right;"><a href="#"><button style="background-color: cornflowerblue;">Sign-In</button></a></li>
+                  <li style="float:right;"><a href="#">Symbol</a></li>
+                  <li style="float:right;"><a href="#">Images</a></li>
                 </ul>
         </nav>
     </div>
+
+
+
+
+   
 
     <div class="box">
     <div class="pictureBox">
@@ -62,5 +69,56 @@
     </div>
 
 </div>
+
+
+<div class="box">
+  <div class="box-flex">
+  <button>Google Search</button>
+  <button style="margin-left:10px;">Push and smile</button>
+  </div>
+
+  <div class="box-flex">
+  <p>Google offered in:</p>
+  <p style="margin-left:10px;"><a href="#">German</a></p>
+  </div>
+</div>
+
+
+
   </body>
+
+  <footer>
+
+    <div>
+
+      <p>Germany</p>
+
+    </div>
+
+
+    <div class="border-bottom">
+
+      
+
+    </div>
+
+    <div>
+      <nav>
+              <ul>
+                <li><a class="footer-a" href="#">Advertising</a></li>
+                <li><a class="footer-a" href="#">Business</a></li>
+                <li><a class="footer-a" href="#">How Search works</a></li>
+                <li><a class="footer-a" href="#">How Search works</a></li>
+                <li><a class="footer-a" href="#">Privacy</a></li>
+                <li><a class="footer-a" href="#">Terms</a></li>
+                <li><a class="footer-a" href="#">Settings</a></li>
+              </ul>
+      </nav>
+  </div>
+
+
+
+
+
+  </footer>
 </html>
